--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
-  <title>PokeDex</title>
+  <title>Pokédex</title>
   <link rel="stylesheet" href="./style.css" />
   <link href="https://fonts.googleapis.com/css?family=Rubik&display=swap" rel="stylesheet" />
+  <link rel="icon" href="image/Logo-Pokebola-Pokémon-PNG.png">
 </head>
 <body>
 
   <div class="container">
-    <h1>Pokedex</h1>
+    <h1>Pokédex</h1>
     <ul data-js="pokedex" class="pokedex"></ul>
   </div>
   
